fixing rpi on mobile

--- a/style.css
+++ b/style.css
@@ -273,8 +273,11 @@
         height: 50vw;
     }
     img {
-        /* width: inherit !important; */
-        /* height: auto !important; */
+        /* width: 80% !important; */
+    }
+
+    * {
+        word-break: break-word !important;
     }
 }
 
